Fix scroll bar shift issue with magic
1. Set body to overflow:hidden
2. Set Main to position: absolute;, and top,right,bottom,left: 0;
3. Move footer within Main

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,7 +5,7 @@ html {
     -ms-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%;
     line-height: normal;
-    overflow-y: scroll;
+    overflow-y: hidden;
 }
 
 body {
